icon size tweaking

--- a/index.html
+++ b/index.html
@@ -116,11 +116,11 @@
             </div>
         </div>
         <!-- FOOTER -->
-        <footer class="footer fixed-bottom border border-info mt-3">
+       <!--  <footer class="footer fixed-bottom border border-info mt-3">
             <div class="footer-copyright text-center text-white fon py-4 ">
                 Made possible with <i class="fas fa-coffee"></i>.js . Brought to you by Marko.
             </div>
-        </footer>
+        </footer> -->
     </div>
 
     <script src="js/script.js"></script>
