tweaking mobile responsive

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <!-- INPUT, RADIO BUTTONS, START GAME BUTTON-->
                     <!-- Input name -->
                     <div class="row no-gutters  pt-3">
-                        <form action="" class="col-sm-12 d-flex justify-content-center" id="form">
+                        <form action="" class="col-12 d-flex justify-content-center" id="form">
                             <input style="width: 100%;" type="text" class="text-center" id="inputName" placeholder="Unesite ime">
                         </form>
                     </div>
@@ -98,7 +98,7 @@
                     </div>
                     <!-- SCORE TABLE -->
                     <div class="row no-gutters">
-                        <table id="table" class="table text-light table-bordered">
+                        <table id="table" class="col-12 table text-light table-bordered">
                             <thead>
                                 <tr>
                                     <th scope="col">#</th>
