--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://kit.fontawesome.com/d195c1ff28.js" crossorigin="anonymous"></script>
-    <title>Memory Game</title>
+    <title>Memory Game <span id="timePrint"></span></title>
     <link rel="stylesheet" href="stylesheet/style.css">
 </head>
 
