changed language on some elements

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <!-- Input name -->
                     <div class="row no-gutters  pt-3">
                         <form action="" class="col-12 d-flex justify-content-center" id="form">
-                            <input style="width: 100%;" type="text" class="text-center" id="inputName" placeholder="Unesite ime">
+                            <input style="width: 100%;" type="text" class="text-center" id="inputName" placeholder="Enter your name">
                         </form>
                     </div>
                     <!-- Difficulty radio buttons -->
