Added project image

--- a/index.html
+++ b/index.html
@@ -35,7 +35,13 @@
 
 	</div>
 </div>
-<div id="projects"></div>
+<div id="projects">
+	<div class="row no gutters">
+		<div class="col-6" id="project_one">
+			<a href = "https://github.com/iskmar/iskmar.github.io/tree/master/memory_game" ><img src = "./images/memory_game_img.png" alt = "" ></a >
+		</div>
+	</div>
+</div>
 <div id="contact"></div>
 <div id="footer"></div>
 <script src = "js/script.js" ></script >
