--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </div>
 <div id="intro" class="row no-gutters align-content-center">
 	<div id="left" class="col-lg-6 ml-lg-5">
-		<h1 class="col-sm-12 m-0 p-0">Iskrenovic Marko</h1>
+		<h1 id="intro_name" class="col-12 col-sm-12 m-0 p-0">Iskrenovic Marko</h1>
 		<p id="front_title" class="col-sm-12">Frontend Web Developer</p>
 		<p id="intro_text">Beginner Frontend Web
 		   developer. Started learning JS for fun,
@@ -37,8 +37,8 @@
 </div>
 <div id="projects">
 	<div class="row no gutters">
-		<div class="col-6" id="project_one">
-			<a href = "https://github.com/iskmar/iskmar.github.io/tree/master/memory_game" ><img src = "./images/memory_game_img.png" alt = "" ></a >
+		<div id="project_one">
+			<a href = "https://github.com/iskmar/iskmar.github.io/tree/master/memory_game" ><img class="col-12" src = "./images/memory_game_img.png" alt = "" ></a >
 		</div>
 	</div>
 </div>
