--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<link rel = "stylesheet" href = "stylesheet/style.css" >
 </head >
 <body >
-<div id="nav" class="container-fluid position-fixed">
+<div id="nav" class="container-fluid position-fixed align-content-center">
 	<ul class="row no-gutters justify-content-center">
 		<li class="nav-list"><a href = "#intro" class="nav-link" >About</a ></li >
 		<li class="nav-list"><a href = "#projects" class="nav-link" >Projects</a ></li >
@@ -38,7 +38,7 @@
 <div id="projects">
 	<div class="row no gutters">
 		<div id="project_one">
-			<a href = "https://github.com/iskmar/iskmar.github.io/tree/master/memory_game" ><img class="col-12" src = "./images/memory_game_img.png" alt = "" ></a >
+			<a href = "https://github.com/iskmar/iskmar.github.io/tree/master/memory_game" target="_blank"><img class="col-12" src = "./images/memory_game_img.png" alt = "" ></a >
 		</div>
 	</div>
 </div>
