--- a/index.html
+++ b/index.html
@@ -14,36 +14,69 @@
 	<link rel = "stylesheet" href = "stylesheet/style.css" >
 </head >
 <body >
-<div id="nav" class="container-fluid position-fixed align-content-center">
-	<ul class="row no-gutters justify-content-center">
-		<li class="nav-list"><a href = "#intro" class="nav-link" >About</a ></li >
-		<li class="nav-list"><a href = "#projects" class="nav-link" >Projects</a ></li >
-		<li class="nav-list"><a href = "#contact" class="nav-link" >Contact</a ></li >
-	</ul>
-</div>
-<div id="intro" class="row no-gutters align-content-center">
-	<div id="left" class="col-lg-6 ml-lg-5">
-		<h1 id="intro_name" class="col-12 col-sm-12 m-0 p-0">Iskrenovic Marko</h1>
-		<p id="front_title" class="col-sm-12">Frontend Web Developer</p>
-		<p id="intro_text">Beginner Frontend Web
-		   developer. Started learning JS for fun,
-		   ended up staying for the challenge it
-		   gives. With each day comes a new challenge
-		   as well as new knowledge.</p>
+<div class="container-fluid">
+	<div id="nav" class="container-fluid position-fixed align-content-center">
+		<ul class="row no-gutters justify-content-center">
+			<li class="nav-list"><a href = "#intro" class="nav-link" >About</a ></li >
+			<li class="nav-list"><a href = "#projects" class="nav-link" >Projects</a ></li >
+			<li class="nav-list"><a href = "#contact" class="nav-link" >Contact</a ></li >
+		</ul>
 	</div>
-	<div id="right">
+	<div id="intro" class="row no-gutters align-content-center">
+		<div id="left" class="col-lg-6 ml-lg-5">
+			<h1 id="intro_name" class="col-12 col-sm-12 m-0 p-0">Iskrenovic Marko</h1>
+			<p id="front_title" class="col-sm-12">Frontend Web Developer</p>
+			<p id="intro_text">Beginner Frontend Web
+			                   developer. Started learning JS for fun,
+			                   ended up staying for the challenge it
+			                   gives. With each day comes a new challenge
+			                   as well as new knowledge.</p>
+		</div>
+		<div id="right">
 
-	</div>
-</div>
-<div id="projects">
-	<div class="row no gutters">
-		<div id="project_one">
-			<a href = "https://github.com/iskmar/iskmar.github.io/tree/master/memory_game" target="_blank"><img class="col-12" src = "./images/memory_game_img.png" alt = "" ></a >
 		</div>
 	</div>
+	<div id="projects">
+		<div class="row no gutters mx-auto align-items-center">
+			<div class="projects-img col-12 col-lg-5 mx-auto" id="project_one">
+				<a href = "https://github.com/iskmar/iskmar.github.io/tree/master/memory_game" target="_blank"><img src = "./images/memory_game_img.png" alt = "" ></a >
+				<div class = "project-card-desc" >
+					<h3 >Memory game</h3 >
+					<p >
+						Monotonectally maintain robust applications with 2.0 services. Efficiently visualize
+						multidisciplinary materials before bleeding-edge interfaces. Professionally synergize cross
+						functional architectures via global deliverables. Collaboratively transform covalent quality
+						vectors without 24/365 leadership skills. Proactively streamline enterprise-wide resources after
+						clicks-and-mortar intellectual capital.
+
+						Conveniently deploy diverse convergence with long-term high-impact e-services. Monotonectally
+						reinvent dynamic.
+					</p >
+
+				</div>
+			</div>
+			<div class="projects-img col-12 col-lg-5 mx-auto" id="project_two">
+				<a href = "https://itboocamp-chat.firebaseapp.com/" target="_blank"><img src = "./images/ITBootcamp_chat_img.png" alt = "" ></a >
+				<div class="project-card-desc">
+					<h3 >Chat app</h3 >
+					<p >
+						Seamlessly brand cross-unit ideas rather than maintainable e-commerce. Dramatically incentivize
+						just in time materials for cross-platform e-services. Proactively disseminate innovative
+						manufactured products with user-centric meta-services. Collaboratively optimize team building
+						interfaces after interactive systems. Progressively expedite revolutionary human capital and
+						user-centric paradigms.
+
+						Collaboratively promote transparent communities without effective content. Uniquely utilize.
+					</p >
+
+				</div>
+			</div>
+		</div>
+	</div>
+	<div id="contact"></div>
+	<div id="footer"></div>
 </div>
-<div id="contact"></div>
-<div id="footer"></div>
+
 <script src = "js/script.js" ></script >
 </body >
 </html >
