--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 	<script src="https://kit.fontawesome.com/d195c1ff28.js" crossorigin="anonymous"></script>
-	<title >Website</title >
+	<title >Iskrenovic Marko</title >
 	<link rel = "stylesheet" href = "stylesheet/style.css" >
 </head >
 <body >
@@ -19,7 +19,7 @@
 		<ul class="row no-gutters justify-content-center">
 			<li class="nav-list"><a href = "#intro" class="nav-link" >About</a ></li >
 			<li class="nav-list"><a href = "#projects" class="nav-link" >Projects</a ></li >
-			<li class="nav-list"><a href = "#contact" class="nav-link" >Contact</a ></li >
+<!--			<li class="nav-list"><a href = "#contact" class="nav-link" >Contact</a ></li >-->
 		</ul>
 	</div>
 	<div id="intro" class="row no-gutters align-content-center">
@@ -39,7 +39,7 @@
 	<div id="projects">
 		<div class="row no gutters mx-auto align-items-center">
 			<div class="projects-img col-12 col-lg-5 mx-auto" id="project_one">
-				<a href = "https://github.com/iskmar/iskmar.github.io/tree/master/memory_game" target="_blank"><img src = "./images/memory_game_img.png" alt = "" ></a >
+				<a href = "https://iskmar.github.io/memory_game/" target="_blank"><img src = "./images/memory_game_img.png" alt = "" ></a >
 				<div class = "project-card-desc" >
 					<h3 >Memory game</h3 >
 					<p >
@@ -56,7 +56,7 @@
 				</div>
 			</div>
 			<div class="projects-img col-12 col-lg-5 mx-auto" id="project_two">
-				<a href = "https://itboocamp-chat.firebaseapp.com/" target="_blank"><img src = "./images/ITBootcamp_chat_img.png" alt = "" ></a >
+				<a href = https://iskmar.github.io/ITBootcamp_Chat/index.html target="_blank"><img src = "./images/ITBootcamp_chat_img.png" alt = "" ></a >
 				<div class="project-card-desc">
 					<h3 >Chat app</h3 >
 					<p >
@@ -73,7 +73,14 @@
 			</div>
 		</div>
 	</div>
-	<div id="contact"></div>
+<!--	<div id="contact">-->
+<!--		<div id="left-contact">-->
+<!--			<form action = "" >-->
+
+<!--			</form >-->
+<!--		</div>-->
+<!--		<div id="right-contact"></div>-->
+<!--	</div>-->
 	<div id="footer"></div>
 </div>
 
