--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				</div>
 			</div>
 			<div class="projects-img col-12 col-lg-5 mx-auto" id="project_two">
-				<a href = https://iskmar.github.io/ITBootcamp_Chat/index.html target="_blank"><img src = "./images/ITBootcamp_chat_img.png" alt = "" ></a >
+				<a href = "https://itboocamp-chat.web.app/" target="_blank"><img src = "./images/ITBootcamp_chat_img.png" alt = "" ></a >
 				<div class="project-card-desc">
 					<h3 >Chat app</h3 >
 					<p >
