changed url for project 1

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	<div id="projects">
 		<div class="row no gutters mx-auto align-items-center">
 			<div class="projects-img col-12 col-lg-5 mx-auto" id="project_one">
-				<a href = "https://iskmar.github.io/memory_game/" target="_blank"><img src = "./images/memory_game_img.png" alt = "" ></a >
+				<a href = "https://memory-game-18ed2.firebaseapp.com/" target="_blank"><img src = "./images/memory_game_img.png" alt = "" ></a >
 				<div class = "project-card-desc" >
 					<h3 >Memory game</h3 >
 					<p >
