--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head >
 <body >
 <div class="container-fluid">
-	<div id="nav" class="container-fluid position-fixed align-content-center">
+	<div id="nav" class="container-fluid position-fixed jusify-content-center align-content-center">
 		<ul class="row no-gutters justify-content-center">
 			<li class="nav-list"><a href = "#intro" class="nav-link" >About</a ></li >
 			<li class="nav-list"><a href = "#projects" class="nav-link" >Projects</a ></li >
