added perma box shadow on devices below 992px

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		</div>
 	</div>
 	<div id="projects">
-		<div class="row no gutters mx-auto align-items-center">
+		<div class="row no gutters mx-auto justify-content-around align-items-center">
 			<div class="projects-img col-12 col-lg-5 mx-auto" id="project_one">
 				<a href = "https://memory-game-18ed2.firebaseapp.com/" target="_blank"><img src = "./images/memory_game_img.png" alt = "" ></a >
 				<div class = "project-card-desc" >
