disabled input submit

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 						<span class="span_name span_text">Message</span>
 					</label>
 				</div>
-				<input type = "submit" id="form_submit" class="col-auto mx-auto" value="Submit" >
+				<input type = "submit" id="form_submit" class="col-auto mx-auto" value="Submit" disabled>
 			</form >
 		</div>
 		<div id="right-contact" class="col-12 col-lg-6">
