added projects description
Took 2 hours 29 minutes

--- a/index.html
+++ b/index.html
@@ -1,140 +1,143 @@
 <!DOCTYPE html>
-<html lang = "en" >
-<head >
-	<meta charset = "UTF-8" >
-	<meta name = "viewport"
-	      content = "width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" >
-	<meta http-equiv = "X-UA-Compatible" content = "ie=edge" >
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-	<script src="https://kit.fontawesome.com/d195c1ff28.js" crossorigin="anonymous"></script>
-	<title >Iskrenovic Marko</title >
-	<link rel = "stylesheet" href = "stylesheet/style.css" >
-</head >
-<body >
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://kit.fontawesome.com/d195c1ff28.js" crossorigin="anonymous"></script>
+    <title>Iskrenovic Marko</title>
+    <link rel="stylesheet" href="stylesheet/style.css">
+</head>
+<body>
 <div id="nav" class="container-fluid position-fixed jusify-content-center align-content-center">
-	<ul class="row no-gutters justify-content-center">
-		<li class="nav-list"><a href = "#intro" class="nav-link" >About</a ></li >
-		<li class="nav-list"><a href = "#projects" class="nav-link" >Projects</a ></li >
-		<li class="nav-list"><a href = "#contact" class="nav-link" >Contact</a ></li >
-	</ul>
+    <ul class="row no-gutters justify-content-center">
+        <li class="nav-list"><a href="#intro" class="nav-link">About</a></li>
+        <li class="nav-list"><a href="#projects" class="nav-link">Projects</a></li>
+        <li class="nav-list"><a href="#contact" class="nav-link">Contact</a></li>
+    </ul>
 </div>
 <div class="container-fluid">
 
-	<div id="intro" class="row no-gutters align-content-center">
-		<div id="left" class="col-lg-6 ml-lg-5">
-			<h1 id="intro_name" class="col-12 col-sm-12 m-0 p-0">Iskrenovic Marko</h1>
-			<p id="front_title" class="col-sm-12">Frontend Web Developer</p>
-			<p id="intro_text">Beginner Frontend Web
-			                   developer. Started learning JS for fun,
-			                   ended up staying for the challenge it
-			                   gives. With each day comes a new challenge
-			                   as well as new knowledge.</p>
-		</div>
-		<div id="right">
+    <div id="intro" class="row no-gutters align-content-center">
+        <div id="left" class="col-lg-6 ml-lg-5">
+            <h1 id="intro_name" class="col-12 col-sm-12 m-0 p-0">Iskrenovic Marko</h1>
+            <p id="front_title" class="col-sm-12">Frontend Web Developer</p>
+            <p id="intro_text">Beginner Frontend Web
+                developer. Started learning JS for fun,
+                ended up staying for the challenge it
+                gives. With each day comes a new challenge
+                as well as new knowledge.</p>
+        </div>
+        <div id="right">
 
-		</div>
-	</div>
-	<div id="projects">
-		<div class="row no gutters mx-auto justify-content-around align-items-center">
-			<div class="projects-img col-12 col-lg-5 mx-auto" id="project_one">
-				<a href = "https://memory-game-18ed2.firebaseapp.com/" target="_blank"><img src = "./images/memory_game_img.png" alt = "" ></a >
-				<div class = "project-card-desc" >
-				<h3 >Memory game</h3 >
-				<p >
-					Monotonectally maintain robust applications with 2.0 services. Efficiently visualize
-					multidisciplinary materials before bleeding-edge interfaces. Professionally synergize cross
-					functional architectures via global deliverables. Collaboratively transform covalent quality
-					vectors without 24/365 leadership skills. Proactively streamline enterprise-wide resources after
-					clicks-and-mortar intellectual capital.
+        </div>
+    </div>
+    <div id="projects">
+        <div class="row no-gutters justify-content-around projects">
+            <div class="projects-img col-12 col-lg-5 mx-auto" id="project_one">
+                <a href="https://memory-game-18ed2.firebaseapp.com/" target="_blank"><img
+                        src="./images/memory_game_img.png" alt=""></a>
+                <div class="project-card-desc">
+                    <h3>Memory game</h3>
+                    <p>
+                        Just a memory game created using vanilla JS, HTML5 and CSS3. It requires you to enter your name,
+                        which is being stored in browser's local storage. After entering name, you can choose difficulty
+                        level of the game.
+                        Game doesn't start until click is detected, after which timer starts.
+                        As this was my first ever project in Javascript, it tested my abilities to think, solve
+                        problems, organize code...
+                        I did my best to make the project functional and code well organized.
+                    </p>
+                    <a href="https://github.com/iskmar/Memory-Card">github/Memory-Card</a>
+                </div>
+            </div>
+            <div class="projects-img col-12 col-lg-5 mx-auto" id="project_two">
+                <a href="https://itboocamp-chat.web.app/" target="_blank">
+                    <img src="./images/ITBootcamp_chat_img.png" alt="">
+                </a>
+                <div class="project-card-desc">
+                    <h3>Chat app</h3>
+                    <p>
+                        I went with slack-like interface only because we were using Slack a lot. It felt convenient at
+                        the time.
+                        Platform is created with a mix of object-oriented programming and functional programming
+                        (beginner level ofc). For data storage,
+                        I was using NoSQL on Cloud Firestore.
+                    </p>
+                    <p>
+                        Some of the functionalities included:
+                    </p>
+                        <ul>
+                            <li>Message deleting</li>
+                            <li>Changing rooms</li>
+                            <li>Name saving</li>
+                            <li>Filtering Messages</li>
+                        </ul>
 
-					Conveniently deploy diverse convergence with long-term high-impact e-services. Monotonectally
-					reinvent dynamic.
-				</p >
-				</div>
-			</div>
-			<div class="projects-img col-12 col-lg-5 mx-auto" id="project_two">
-				<a href = "https://itboocamp-chat.web.app/" target="_blank"><img src = "./images/ITBootcamp_chat_img.png" alt = "" ></a >
-				<div class="project-card-desc">
-				<h3 >Chat app</h3 >
-				<p >
-					Seamlessly brand cross-unit ideas rather than maintainable e-commerce. Dramatically incentivize
-					just in time materials for cross-platform e-services. Proactively disseminate innovative
-					manufactured products with user-centric meta-services. Collaboratively optimize team building
-					interfaces after interactive systems. Progressively expedite revolutionary human capital and
-					user-centric paradigms.
+                    <a href="https://github.com/iskmar/ITBootcamp-Chat">github/ITBootcamp-Chat</a>
 
-					Collaboratively promote transparent communities without effective content. Uniquely utilize.
-				</p >
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="contact" class="row no-gutters">
+        <div id="left-contact" class="col-12 col-lg-6">
+            <h1>Get in touch with me</h1>
+            <h3>Send a message and I'll respond asap</h3>
+            <form action="" class="justify-content-center">
+                <div class="form">
+                    <input type="text" name="name" class="form_name" autocomplete="off" required>
+                    <label for="name" class="name_label">
+                        <span class="span_name">Name</span>
+                    </label>
+                </div>
+                <div class="form">
+                    <input type="email" name="name" class="form_name" autocomplete="off" required>
+                    <label for="" class="name_label">
+                        <span class="span_name">Email</span>
+                    </label>
+                </div>
+                <div class="form form_message">
+                    <textarea name="message" class="form_name form_text" required></textarea>
+                    <!--					<input type = "text" name="message" class="form_name form_message" autocomplete="off" required>-->
+                    <label for="message" class="name_label text_label">
+                        <span class="span_name span_text">Message</span>
+                    </label>
+                </div>
+                <input type="submit" id="form_submit" class="col-auto mx-auto" value="Submit" disabled>
+            </form>
+        </div>
+        <div id="right-contact" class="col-12 col-lg-6">
+            <div class="links">
+                <h2>You can also stay in touch via bellow links</h2>
+                <div class="link github">
+                    <a href="https://github.com/iskmar" target="_blank">
+                        <i class="fab fa-github"></i>
+                    </a>
+                    <a href="https://github.com/iskmar" target="_blank">
+                        <span>Github</span>
+                    </a>
+                </div>
+                <div class="link linkedin">
+                    <a href="https://www.linkedin.com/in/iskmar/" target="_blank">
+                        <i class="fab fa-linkedin"></i>
+                    </a>
+                    <a href="https://www.linkedin.com/in/iskmar/" target="_blank">
+                        <span>linkedin</span>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
 
-				</div>
-			</div>
-		</div>
-	</div>
-	<div id="contact" class="row no-gutters">
-		<div id="left-contact" class="col-12 col-lg-6">
-			<h1>Get in touch with me</h1>
-			<h3>Send a message and I'll respond asap</h3>
-			<form action = "" class="justify-content-center">
-				<div class="form">
-					<input type = "text" name="name" class="form_name" autocomplete="off" required >
-					<label for = "name" class="name_label" >
-						<span class="span_name">Name</span>
-					</label >
-				</div>
-				<div class="form">
-					<input type = "email" name="name" class="form_name" autocomplete="off" required >
-					<label for = "" class="name_label" >
-						<span class="span_name">Email</span>
-					</label>
-				</div>
-				<div class="form form_message">
-					<textarea name = "message" class = "form_name form_text" required  ></textarea >
-<!--					<input type = "text" name="message" class="form_name form_message" autocomplete="off" required>-->
-					<label for = "message" class="name_label text_label" >
-						<span class="span_name span_text">Message</span>
-					</label>
-				</div>
-				<input type = "submit" id="form_submit" class="col-auto mx-auto" value="Submit" disabled>
-			</form >
-		</div>
-		<div id="right-contact" class="col-12 col-lg-6">
-			<div class="links">
-				<h2>You can also stay in touch via bellow links</h2>
-				<div class="link github">
-					<a href = "https://github.com/iskmar" target="_blank">
-						<i class="fab fa-github"></i>
-					</a >
-					<a href = "https://github.com/iskmar" target="_blank">
-						<span>Github</span>
-					</a >
-				</div>
-				<div class="link linkedin">
-					<a href = "https://www.linkedin.com/in/iskmar/" target="_blank">
-						<i class="fab fa-linkedin"></i>
-					</a >
-					<a href = "https://www.linkedin.com/in/iskmar/" target="_blank">
-						<span>linkedin</span>
-					</a >
-				</div>
-<!--				<div class="link website">-->
-<!--					<a href = "" >-->
-<!--						<i class="fas fa-globe"></i>-->
-<!--					</a >-->
-<!--					<a href = "" >-->
-<!--						<span>iskmargithub</span>-->
-<!--					</a >-->
-<!--				</div>-->
-
-			</div>
-		</div>
-	</div>
-
-	<div id="footer"></div>
+    <div id="footer"></div>
 </div>
 
-<script src = "js/script.js" ></script>
-</body >
-</html >
+<script src="js/script.js"></script>
+</body>
+</html>
