project link should open in new tab
Took 3 minutes

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         problems, organize code...
                         I did my best to make the project functional and code well organized.
                     </p>
-                    <a href="https://github.com/iskmar/Memory-Card">github/Memory-Card</a>
+                    <a href="https://github.com/iskmar/Memory-Card" target="_blank">github/Memory-Card</a>
                 </div>
             </div>
             <div class="projects-img col-12 col-lg-5 mx-auto" id="project_two">
@@ -79,7 +79,7 @@
                             <li>Filtering Messages</li>
                         </ul>
 
-                    <a href="https://github.com/iskmar/ITBootcamp-Chat">github/ITBootcamp-Chat</a>
+                    <a href="https://github.com/iskmar/ITBootcamp-Chat" target="_blank">github/ITBootcamp-Chat</a>
 
                 </div>
             </div>
