--- a/blog.html
+++ b/blog.html
@@ -1,30 +1,36 @@
-
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Blog</title>
-
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://kit.fontawesome.com/d195c1ff28.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="stylesheet/blogstyle.css">
-
+    <title>Blog</title>
+    <link type="text/css" rel="stylesheet" href="stylesheet/blogstyle.css">
 </head>
 <body>
-    <div class="nav">
+<div class="nav">
+    <div id="nav" class="container-fluid position-fixed d-flex flex-row-reverse">
+        <ul id="nav-ul" class="row no-gutters">
+            <li class="nav-list"><a href="#" class="nav-link">Portfolio</a></li>
+            <li class="nav-list"><a href="#" class="nav-link">About</a></li>
+            <li class="nav-list"><a href="#" class="nav-link">Search</a></li>
+        </ul>
+    </div>
+
+</div>
+<div class="intro-pic">
+
+</div>
+<div class="main">
+    <div class="row no-gutters justify-content-between align-content-center d-flex">
 
     </div>
-    <div class="intro-pic">
-
-    </div>
-    <main class="main">
-
-    </main>
+</div>
 </body>
 </html>
